# OMNIOS

./: .env  .eslintrc.json  .gitignore  README.md  collab-server.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  repomix-output.xml  tailwind.config.ts  test-require.js  tsconfig.json  verify_framer18.ts  vitest.config.ts
.agent/workflows/: omnios_verification_protocol.md
docs/: DATA_FLOW_DOCUMENTATION.md  GAP_ANALYSIS.md  README.md  TYPE_SYSTEM_ANALYSIS.md  cursorchat.html
docs/New folder/: COMPONENTS_ANALYSIS.md  (+4 more)
extension/: manifest.json  popup.html  popup.js
figma-plugin/: code.ts  manifest.json  ui.html
playwright-report/: index.html
prisma/: dev.db  schema.prisma
scripts/: test-db.ts
src/: auth.ts  middleware.ts
src-tauri/: tauri.conf.json
src/omnios-engine/: Cargo.toml  test_blueprint.json
src/omnios-engine/src/: a11y.rs  assets.rs  autonomous.rs  collab.rs  fonts.rs  healing.rs  lib.rs  native.rs  neural.rs  optimizer.rs  runtime.rs  sdk.rs  verify_a11y_refined.rs  verify_native_standalone.rs  vqa.rs
src/omnios-engine/src/core/: auth.rs  mod.rs  secrets.rs
src/omnios-engine/src/plugins/: devtools.rs  input.rs  interaction.rs  layout.rs  logic.rs  logic_kernel.rs  mod.rs  network.rs  physics.rs  simulation.rs  spatial_index.rs  standard.rs  visuals.rs  vqa.rs
test-results/: .last-run.json
tests/: compiler_test.ts  export_test.ts  generator_test.ts  runtime_test.ts  structure_test.ts  test_inverse_compiler.ts  verify_marketplace.ts  verify_phase3.ts  verify_phase4.ts  verify_phase5.ts  verify_sync.ts
(+340 files in other folders)
